--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div id="hero-2"></div>
           <div id="hero-3"></div>
         </div>
-        <video autoplay loop muted src="./media/mohclip.mp4"></video>
+        <video autoplay loop muted src="./media/moh maya media.mp4"></video>
       </div>
       <div id="page2">
         <div id="moving-text">
@@ -262,3 +262,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
